modified the datagrid to show timetable ui more information

--- a/TicketRobot.Service/TicketRobot.Service.csproj
+++ b/TicketRobot.Service/TicketRobot.Service.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TicketRobot.Core\TicketRobot.Core.csproj">
